Task for sending e-mails added

--- a/Enviando_e-mails.ipynb
+++ b/Enviando_e-mails.ipynb
@@ -1,18 +1,43 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# conda install stmplib\n",
-    "import smtplib"
+    "## Enviando E-Mails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* SMTP = *Simple Mail Transfer Protocol*.\n",
+    "\n",
+    "\n",
+    "* Define como os e-mails devem ser enviados."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smtplib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configurar o provedor de e-mail\n",
+    "\n",
+    "O nome de domínio do servidor SMTP normalmente será o nome de domínio de seu provedor de emails com SMTP. na frente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +45,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testar a conexão"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(250,\n",
-       " b'smtp.gmail.com at your service, [2804:14d:1483:98e6:7844:2d86:6f8:34e0]\\nSIZE 35882577\\n8BITMIME\\nSTARTTLS\\nENHANCEDSTATUSCODES\\nPIPELINING\\nCHUNKING\\nSMTPUTF8')"
+       " b'smtp.gmail.com at your service, [2804:14d:1484:4256:8054:2d61:afb5:87d6]\\nSIZE 35882577\\n8BITMIME\\nSTARTTLS\\nENHANCEDSTATUSCODES\\nPIPELINING\\nCHUNKING\\nSMTPUTF8')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,8 +73,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se retornou `250`, é porque está tudo OK."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Precisamos deixar nossa aplicação segura utilizando criptografia TLS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +97,7 @@
        "(220, b'2.0.0 Ready to start TLS')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,8 +107,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " * O `220` no valor de retorno informa que o servidor está pronto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vamos realizar login"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remetente = 'exemplo.python@gmail.com'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,56 +140,110 @@
        "(235, b'2.7.0 Accepted')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smtpObj.login('login', 'senha')"
+    "smtpObj.login(remetente, 'exemplo123')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mailList = ['email1', 'email2', \"email3\"]\n",
-    "body = 'Subject: So long.\\nDear Alice, so long and thanks for all the fish. Sincerely, Bob'\n",
-    "\n",
-    "for mail in mailList:\n",
-    "    smtpObj.sendmail('remetente', mail,  body)"
+    "## Agora iremos enviar nosso primeiro e-mail com Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mailDict = {'name1' : \"email1\", \"name2\" : \"mail2\"}\n",
-    "\n",
-    "subject = 'Subject: So long.\\n'\n",
-    "\n",
-    "\n",
-    "for name, mail in mailDict.items():\n",
-    "    body = subject + 'Dear ' +  name + ', so long and thanks for all the fish. Sincerely, Bob'\n",
-    "    smtpObj.sendmail('remetente', mail,  body)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(221, b'2.0.0 closing connection r195-v6sm1326669vkr.1 - gsmtp')"
+       "{}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "body = 'Subject: So long.\\nDear Alice, so long and thanks for all the fish. Sincerely, Bob'\n",
+    "\n",
+    "destinatario = 'email' # Preencha o e-mail do destinatário aqui\n",
+    "\n",
+    "smtpObj.sendmail(remetente, destinatario,  body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## É bem simples essa tarefa. Mas se eu quiser enviar e-mails para mais de 1 pessoa?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mailList = ['email_1', \n",
+    "            'email_2'] # Preencha os e-mails dos destinatários aqui\n",
+    "\n",
+    "body = 'Subject: So long.\\nDear Alice, so long and thanks for all the fish. Sincerely, Bob'\n",
+    "\n",
+    "for mail in mailList:\n",
+    "    smtpObj.sendmail(remetente, mail,  body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iremos realizar uma pequena modificação. Agora, a minha lista tem o nome da pessoa e o seu e-mail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mailDict = {'name_1' : 'email_1', \n",
+    "            'name_2' : 'email_2'} # Preencha os nomes e e-mails dos destinatários aqui\n",
+    "\n",
+    "subject = 'Subject: So long.\\n'\n",
+    "\n",
+    "for name, mail in mailDict.items():\n",
+    "    body = subject + 'Dear ' +  name + ', so long and thanks for all the fish. Sincerely, Bob'\n",
+    "    smtpObj.sendmail(remetente, mail,  body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Após isso, iremos fechar a conexão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(221, b'2.0.0 closing connection w4-v6sm1451139uaj.8 - gsmtp')"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,13 +251,6 @@
    "source": [
     "smtpObj.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
